@@ -1,5 +1,5 @@
 plugins {
-    id("java")
+    id("java-library")
 }
 
 repositories {
@@ -13,4 +13,12 @@ dependencies {
     implementation 'com.google.auto.service:auto-service:1.1.1'
     annotationProcessor 'com.google.auto.service:auto-service:1.1.1'
     implementation 'com.squareup:javapoet:1.13.0'
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = "UTF-8" // Use the UTF-8 charset for Java compilation
+    options.compilerArgs.add("--add-exports=jdk.compiler/com.sun.tools.javac.api=wild.wind.annotation.processor")
+    options.compilerArgs.add("--add-exports=jdk.compiler/com.sun.tools.javac.code=wild.wind.annotation.processor")
+    options.compilerArgs.add("--add-exports=jdk.compiler/com.sun.tools.javac.tree=wild.wind.annotation.processor")
+    options.compilerArgs.add("--add-exports=jdk.compiler/com.sun.tools.javac.util=wild.wind.annotation.processor")
 }
